# IfcOpenShell

cmake/: CMakeLists.txt
cmake/modules/: FindNodejs.cmake
osx/: build-all.sh
src/node-ifcopenshell/: CMakeLists.txt  binding.gyp.cmake  ifcopenshelljs.i  package.json.cmake
